# log-anomaly-detector

./: .env.example  PROJECT_IMPLEMENTATION.md  README.md  pyproject.toml  run_gui.sh  run_gui_windows.ps1
plugins/: log-anomaly-detector.json
src/: index.py
